--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<a href="/">EVKey</a>
 				</div>
 				<h1 class="heading">
-					<a href="vietnam/vietnam.html" title="Download EVKey mới nhất để gõ tiếng Việt trên Windows">Tải EVKey mới nhất để Gõ tiếng Việt</a>
+					<a href="/" title="Download EVKey mới nhất để gõ tiếng Việt trên Windows">Tải EVKey mới nhất để Gõ tiếng Việt</a>
 				</h1>
 				<p class="intro">EVKey là phần mềm 
 					<strong>gõ tiếng Việt có dấu</strong> được download nhiều nhất, tải miễn phí, gọn nhẹ, ổn định, dễ sử dụng, nhiều tính năng, tương thích với mọi Windows (Win 10, Win 8, Win 7) 32 bit, 64 bit.
