--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       <meta charset="UTF-8" />
       <meta name="robots" content="index, follow" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="keywords" content="" />
-      <meta name="description" content="" />
-      <title>EVKey - Bộ gõ tiếng Việt trên Windows</title>
+      <meta name="keywords" content="evkey, bo go tieng viet, evkey moi nhat, download evkey, go tieng viet, go tieng viet gon nhe, evkey 2019, tai evkey, bo go tieng viet" />
+      <meta name="description" content="EVKey, EVKey là ứng dụng hỗ trợ gõ Tiếng Việt trên máy tính gọn nhẹ và ổn định nhất hiện nay. EVKey được thiết kế và tối ưu để có thể chạy mượt mà trên mọi cấu hình máy tính, hỗ trợ hầu hết mọi font chữ tiếng Việt từ TCVN3, Unicode, VNI, ABC... đến các kiểu gõ Telex, VNI" />
+      <title>EVKey - Tải bộ gõ tiếng Việt EVKey trên Windows 10, Windows 8, Windows 7, Windows XP mới nhất.</title>
       <link rel="stylesheet" href="media/css/template.css" type="text/css" />
    </head>
    <body>
@@ -282,13 +282,13 @@
             </div>
             <div class="custom">
                <div class="block3">
-                  <img src="media/images/screenshots/evkey-gui.png" />
+                  <img src="media/images/screenshots/evkey-gui.png" alt="go tieng viet cho windows 10" />
                </div>
                <div class="block3">
-                  <img src="media/images/screenshots/evkey-macro.png" />
+                  <img src="media/images/screenshots/evkey-macro.png" alt="go tieng viet cho windows 8"   />
                </div>
                <div class="block3">
-                  <img src="media/images/screenshots/evkey-toolkit.png" />
+                  <img src="media/images/screenshots/evkey-toolkit.png" alt="go tieng viet cho windows 7"  />
                </div>
             </div>
             <div class="clear"></div>
