--- a/index.html
+++ b/index.html
@@ -396,20 +396,20 @@
                <div class="block4">&nbsp;</div>
                <div class="block4">
                   <h3>
-                     <a href="https://drive.google.com/drive/folders/12DbnnsOs89D79loTZ_rTuU696qZZPB1_" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
+                     <a href="/download/EVKey32.exe" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
                   </h3>
                   <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                  <a class="downloadbutton" href="https://drive.google.com/drive/folders/12DbnnsOs89D79loTZ_rTuU696qZZPB1_" >Download</a>
+                  <a class="downloadbutton" href="/download/EVKey32.exe" >Download</a>
                   <div class="downloadnote">
                      <strong>EVKey 32bit Portable</strong>
                   </div>
                </div>
                <div class="block4">
                   <h3>
-                     <a href="https://drive.google.com/drive/folders/12DbnnsOs89D79loTZ_rTuU696qZZPB1_" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
+                     <a href="/download/EVKey64.exe" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
                   </h3>
                   <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                  <a class="downloadbutton" href="https://drive.google.com/drive/folders/12DbnnsOs89D79loTZ_rTuU696qZZPB1_">Download</a>
+                  <a class="downloadbutton" href="/download/EVKey64.exe">Download</a>
                   <div class="downloadnote">
                      <strong>EVKey 64bit Portable</strong>
                   </div>
