--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="robots" content="index, follow" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta name="keywords" content="evkey, bo go tieng viet, evkey moi nhat, download evkey, go tieng viet, go tieng viet gon nhe, evkey 2019, tai evkey, bo go tieng viet" />
-      <meta name="description" content="EVKey, EVKey là ứng dụng hỗ trợ gõ Tiếng Việt trên máy tính gọn nhẹ và ổn định nhất hiện nay. EVKey được thiết kế và tối ưu để có thể chạy mượt mà trên mọi cấu hình máy tính, hỗ trợ hầu hết mọi font chữ tiếng Việt từ TCVN3, Unicode, VNI, ABC... đến các kiểu gõ Telex, VNI" />
+      <meta name="description" content="EVKey, EVKey là ứng dụng hỗ trợ gõ Tiếng Việt trên máy tính gọn nhẹ và ổn định nhất hiện nay. EVKey được thiết kế và tối ưu để có thể chạy mượt mà trên mọi cấu hình máy tính" />
       <title>EVKey - Tải bộ gõ tiếng Việt EVKey trên Windows 10, Windows 8, Windows 7, Windows XP mới nhất.</title>
       <link rel="stylesheet" href="media/css/template.css" type="text/css" />
    </head>
@@ -396,20 +396,20 @@
                <div class="block4">&nbsp;</div>
                <div class="block4">
                   <h3>
-                     <a href="https://github.com/evkey/evkey.github.io/releases/download/v3.3.8/EVKey32.exe" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
+                     <a href="https://github.com/evkey/evkey.github.io/releases/download/3.3.9/EVKey32.exe" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
                   </h3>
                   <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                  <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/v3.3.8/EVKey32.exe" >Download</a>
+                  <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/3.3.9/EVKey32.exe" >Download</a>
                   <div class="downloadnote">
                      <strong>EVKey 32bit Portable</strong>
                   </div>
                </div>
                <div class="block4">
                   <h3>
-                     <a href="https://github.com/evkey/evkey.github.io/releases/download/v3.3.8/EVKey64.exe" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
+                     <a href="https://github.com/evkey/evkey.github.io/releases/download/3.3.9/EVKey64.exe" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
                   </h3>
                   <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                  <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/v3.3.8/EVKey64.exe">Download</a>
+                  <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/3.3.9/EVKey64.exe">Download</a>
                   <div class="downloadnote">
                      <strong>EVKey 64bit Portable</strong>
                   </div>
