--- a/index.html
+++ b/index.html
@@ -397,33 +397,33 @@
             <div class="custom">
                 <div class="block3">
                     <h3>
-                        <a href="https://github.com/evkey/evkey.github.io/releases/download/3.4.2/EVKey.Setup.exe" title="EVKey bản cài đặt" rel="nofollow">Bản cài đặt ổn định</a>
+                        <a href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey.Setup.exe" title="EVKey bản cài đặt" rel="nofollow">Bản cài đặt ổn định</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/3.4.2/EVKey.Setup.exe">Download</a>
+                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey.Setup.exe"  title="Download EvKey setup hoàn thiện">Download</a>
                     <div class="downloadnote">
-                        <strong>EVKey Setup</strong>
+                        <strong>Chạy trên mọi phiên bản Windows</strong>
                     </div>
                 </div>
 
                 <div class="block3">
                     <h3>
-                        <a href="https://github.com/evkey/evkey.github.io/releases/download/3.4.2/EVKey32.exe" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
+                        <a href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey32.exe" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/3.4.1/EVKey32.exe">Download</a>
+                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey32.exe"  title="Download EvKey portable 32 bit">Download</a>
                     <div class="downloadnote">
-                        <strong>EVKey 32bit Portable</strong>
+                        <strong>Bản portable, chạy trên Windows 32 bit</strong>
                     </div>
                 </div>
                 <div class="block3">
                     <h3>
-                        <a href="https://github.com/evkey/evkey.github.io/releases/download/3.4.2/EVKey64.exe" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
+                        <a href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey64.exe" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/3.4.2/EVKey64.exe">Download</a>
+                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey64.exe" title="Download EvKey portable 64 bit">Download</a>
                     <div class="downloadnote">
-                        <strong>EVKey 64bit Portable</strong>
+                        <strong>Bản portable, chạy trên Windows 64 bit</strong>
                     </div>
                 </div>
             </div>
