--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <meta name="description" content="EVKey là ứng dụng hỗ trợ gõ Tiếng Việt trên máy tính gọn nhẹ và ổn định nhất hiện nay." />
     <title>EVKey - Trang chủ EVKey - Tải bộ gõ tiếng Việt mới nhất.</title>
     <link rel="stylesheet" href="media/css/template.css" type="text/css" />
+        <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-THFTQCQ');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-THFTQCQ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <a id="home"></a>
     <div class="wrapper box1">
         <div class="custom">
@@ -397,7 +408,7 @@
             <div class="custom">
                 <div class="block3">
                     <h3>
-                        <a href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey.Setup.exe" title="EVKey bản cài đặt" rel="nofollow">Bản cài đặt ổn định</a>
+                        <a href="#" title="EVKey bản cài đặt" rel="nofollow">Bản cài đặt ổn định</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
                     <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey.Setup.exe"  title="Download EvKey setup hoàn thiện">Download</a>
@@ -408,7 +419,7 @@
 
                 <div class="block3">
                     <h3>
-                        <a href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey32.exe" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
+                        <a href="#" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
                     <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey32.exe"  title="Download EvKey portable 32 bit">Download</a>
