--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="custom">
                 <div class="block3">
                     <h3>
-                        <a href="#" title="EVKey bản cài đặt" rel="nofollow">Bản cài đặt ổn định</a>
+                        <a href="#download" title="EVKey bản cài đặt" rel="nofollow">Bản cài đặt ổn định</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
                     <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey.Setup.exe"  title="Download EvKey setup hoàn thiện">Download</a>
@@ -419,7 +419,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <div class="block3">
                     <h3>
-                        <a href="#" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
+                        <a href="##download" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
                     <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey32.exe"  title="Download EvKey portable 32 bit">Download</a>
@@ -429,7 +429,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="block3">
                     <h3>
-                        <a href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey64.exe" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
+                        <a href="#download" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
                     <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey64.exe" title="Download EvKey portable 64 bit">Download</a>
