--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="evkey, bo go tieng viet, evkey moi nhat, download evkey, go tieng viet, go tieng viet gon nhe, evkey 2019, tai evkey, bo go tieng viet" />
+    <meta name="keywords" content="evkey, bo go tieng viet, evkey moi nhat, download evkey, go tieng viet, go tieng viet gon nhe, evkey 2019, tai evkey, bo go tieng viet, go tieng viet tren MacOS" />
     <meta name="description" content="EVKey là ứng dụng hỗ trợ gõ Tiếng Việt trên máy tính gọn nhẹ và ổn định nhất hiện nay." />
     <title>EVKey - Trang chủ EVKey - Tải bộ gõ tiếng Việt mới nhất.</title>
     <link rel="stylesheet" href="media/css/template.css" type="text/css" />
@@ -30,10 +30,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
             <h1 class="heading">
-                <a href="#download" title="Download EVKey mới nhất để gõ tiếng Việt trên Windows">Tải EVKey mới nhất để Gõ tiếng Việt</a>
+                <a href="#download" title="Download EVKey mới nhất để gõ tiếng Việt trên Windows, MacOS X">Tải EVKey mới nhất để Gõ tiếng Việt</a>
             </h1>
             <p class="intro">
-                EVKey là phần mềm<strong>gõ tiếng Việt có dấu</strong> gọn nhẹ, ổn định, được download nhiều nhất, tải miễn phí, dễ sử dụng, nhiều tính năng, tương thích với mọi Windows (Win 10, Win 8, Win 7, Win XP) 32 bit, 64 bit.
+                EVKey là phần mềm<strong>gõ tiếng Việt có dấu</strong> gọn nhẹ, ổn định, được download nhiều nhất, tải miễn phí, dễ sử dụng, nhiều tính năng, tương thích với mọi Windows (Win 10, Win 8, Win 7, Win XP) 32 bit, 64 bit và trên MacOS.
             </p>
         </div>
     </div>
@@ -227,7 +227,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </p>
                     <p>
                         <strong>Bộ gõ tiếng Việt EVKey mới nhất</strong> có thể cài đặt trên
-                        <strong>hệ điều hành Windows</strong> (Win 10, Window 8, Win 7, Win XP...) và được cập nhật liên tục khi có phản hồi của người dùng
+                        <strong>hệ điều hành Windows</strong> (MacOS X, Win 10, Window 8, Win 7, Win XP...) và được cập nhật liên tục khi có phản hồi của người dùng
                     </p>
                 </div>
                 <div class="block2">
@@ -254,6 +254,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li>5. Hỗ trợ game LOL, DOTA 2</li>
                 <li>6. Hỗ trợ game Audition và Đột kích</li>
                 <li>7. Giảm hiện tượng treo bộ gõ</li>
+                <li>8. Có phiên bản EvKey dành cho MacOS X</li>
             </ol>
             <div class="clear"></div>
         </div>
@@ -300,12 +301,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="media/images/screenshots/evkey-macro.jpg" alt="go tieng viet cho windows 8" />
                 </div>
                 <div class="block3">
-                    <img src="media/images/screenshots/evkey-toolkit.jpg" alt="go tieng viet cho windows 7" />
+                    <img src="media/images/screenshots/evkey-toolkit.jpg" alt="go tieng viet cho Mac OS" />
                 </div>
             </div>
             <div class="clear"></div>
             <div class="custom">
-                <p>Bộ gõ tiếng Việt EVKey các phiên bản từ EVKey có giao diện khá đơn giản, đồng nhất trên các hệ điều hành Windows (Win 10, Win 7..), dễ quản lý và dễ sử dụng. Mọi chức năng và thiết lập của phần mềm đều được tập trung duy nhất trên một bảng điều khiển. Ở chế độ thu nhỏ (Compact) EVKey chỉ hiện thị 3 thiết lập chính: Lựa chọn bảng mã, kiểu gõ và tổ hợp phím chuyển đổi. Điều này cho phép người sử dụng mới dễ dàng tiếp cận, không bị rối so với nhiều phần mềm gõ tiếng Việt khác như VietKey, GoTiengViet... Với những người dùng cao cấp hơn, EVKey cũng cung cấp thêm nhiều tùy chọn ở chế độ mở rộng (Advanced).</p>
+                <p>Bộ gõ tiếng Việt EVKey các phiên bản từ EVKey có giao diện khá đơn giản, đồng nhất trên các hệ điều hành Windows (Win 10, Win 7..) và Mac OS, dễ quản lý và dễ sử dụng. Mọi chức năng và thiết lập của phần mềm đều được tập trung duy nhất trên một bảng điều khiển. Ở chế độ thu nhỏ (Compact) EVKey chỉ hiện thị 3 thiết lập chính: Lựa chọn bảng mã, kiểu gõ và tổ hợp phím chuyển đổi. Điều này cho phép người sử dụng mới dễ dàng tiếp cận, không bị rối so với nhiều phần mềm gõ tiếng Việt khác như VietKey, GoTiengViet... Với những người dùng cao cấp hơn, EVKey cũng cung cấp thêm nhiều tùy chọn ở chế độ mở rộng (Advanced).</p>
             </div>
         </div>
     </div>
@@ -329,7 +330,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="#download" title="tải evkey">Download EVKey</a>
                 </li>
                 <li>
-                    <a href="#huong-dan" title="hướng dẫn gõ tiếng việt">Hướng dẫn</a>
+                    <a href="#huong-dan" title="hướng dẫn gõ tiếng việt trên MAC OS">Hướng dẫn</a>
                 </li>
                 <li>
                     <a href="#tac-gia" title="tác giả evkey">Tác giả</a>
@@ -363,7 +364,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </strong> và cài đặt EVKey một cách dễ dàng.
                     </p>
                     <p>EVKey cho phép chuyển đổi (convert) qua lại giữa 15 bảng mã tiếng Việt từ clip-board (bộ nhớ máy tính) hoặc từ file văn bản .TXT hoặc .RTF</p>
-                    <p>EVKey chạy rất ổn định trên tất cả các phiên bản Windows: Từ phiên bản Windows 10 - Win 10 mới nhất hiện nay, cho tới các phiên bản cũ hơn nhưng cũng khá phổ biến như Windows 8, Windows 8.1, Windows 7</p>
+                    <p>EVKey chạy rất ổn định trên tất cả các phiên bản Windows: Từ phiên bản Windows 10 - Win 10 mới nhất hiện nay, cho tới các phiên bản cũ hơn nhưng cũng khá phổ biến như Windows 8, Windows 8.1, Windows 7. Hiện nay EvKey đang được phát triển cho MacOS X</p>
+                    <p>EVKey chạy rất ổn định trên tất cả các phiên bản MacOS X mới nhất</p>
                 </div>
                 <div>
                 </div>
@@ -403,38 +405,48 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="inner">
             <div class="sectiontitlegoc"></div>
             <div class="sectiontitle">
-                <h2>Tải EVKey miễn phí - Download EVKey mới nhất cho Win 10, Win 8, Win 7</h2>
+                <h2>Tải EVKey miễn phí - Download EVKey mới nhất cho MacOS X, Win 10, Win 8, Win 7, MacOS X</h2>
             </div>
             <div class="custom">
-                <div class="block3">
+                <div class="block4">
                     <h3>
                         <a href="#download" title="EVKey bản cài đặt" rel="nofollow">Bản cài đặt ổn định</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey.Setup.exe"  title="Download EvKey setup hoàn thiện">Download</a>
+                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey.Setup.zip"  title="Download EvKey setup hoàn thiện">Download</a>
                     <div class="downloadnote">
                         <strong>Chạy trên mọi phiên bản Windows</strong>
                     </div>
                 </div>
 
-                <div class="block3">
+                <div class="block4">
                     <h3>
                         <a href="##download" title="EVKey bản chạy trực tiếp 32bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 32bit</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey32.exe"  title="Download EvKey portable 32 bit">Download</a>
+                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey32.zip"  title="Download EvKey portable 32 bit">Download</a>
                     <div class="downloadnote">
                         <strong>Bản portable, chạy trên Windows 32 bit</strong>
                     </div>
                 </div>
-                <div class="block3">
+                <div class="block4">
                     <h3>
                         <a href="#download" title="EVKey bản chạy trực tiếp 64bit không cần cài đặt" rel="nofollow">Bản chạy trực tiếp 64bit</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Portable" width="155" height="144" />
-                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey64.exe" title="Download EvKey portable 64 bit">Download</a>
+                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKey64.zip" title="Download EvKey portable 64 bit">Download</a>
                     <div class="downloadnote">
                         <strong>Bản portable, chạy trên Windows 64 bit</strong>
+                    </div>
+                </div>
+                <div class="block4">
+                    <h3>
+                        <a href="#download" title="EVKey dành cho MacOS X" rel="nofollow">Bản chạy trực tiếp cho MacOS X</a>
+                    </h3>
+                    <img src="media/images/download/evkey-portable.png" alt="EVKey Mac OS" width="155" height="144" />
+                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKeyMac.zip" title="Download EvKey portable 64 bit">Download</a>
+                    <div class="downloadnote">
+                        <strong>Bản dành cho Mac OS X </strong>
                     </div>
                 </div>
             </div>
@@ -460,7 +472,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </strong> hoặc từ
                 <strong>
                     <a href="https://www.facebook.com/bogotiengvietevkey/" target="_blank" rel="nofollow" title="Website dự án EVKey">website dự án EVKey</a>
-                </strong> (tại faebook.com). Nếu bạn tải EVKey từ những nguồn không rõ ràng khác, bạn sẽ có nguy cơ bị lây nhiễm các phần mềm độc hại.
+                </strong> (tại facebook.com). Nếu bạn tải EVKey từ những nguồn không rõ ràng khác, bạn sẽ có nguy cơ bị lây nhiễm các phần mềm độc hại.
             </p>
             <hr />
             <p>
@@ -584,9 +596,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>
                     <strong>Chính sách bảo mật:</strong> Chúng tôi không lưu trữ bất cứ thông tin gì của người dùng và không can thiệp vào dữ liệu, kết nối mạng máy tính của người dùng ngoài chức năng chính của phần mềm (VD: đối với EVKey là gõ tiếng Việt có dấu trên Win 10, Win7...). Website này cũng liên tục được giám sát và bảo vệ nhiều lớp để đảm bảo mọi thông tin và file cài đặt, các gói download trên máy chủ không bị tấn công, chỉnh sửa, gắn thêm mã độc cho những mục đích xấu.
                 </p>
-                <p>
-                    <strong>Vậy thì chúng tôi là ai?</strong> Chúng tôi là những người yêu tự do, yêu phầm mềm nguồn mở và thích sự miễn phí. Chúng tôi mong muốn mọi người đều có thể tiếp cận những ứng dụng hữu ích, không thương mại hóa trong đó có EVKey và nhiều phần mềm miễn phí khác của người Việt. Bên cạnh đó chúng tôi cũng luôn muốn đảm bảo bất kỳ ai khi sử dụng đều được an toàn. Vì vậy chúng tôi đã, đang và sẽ nỗ lực hết mình để duy trì website này.
-                </p>
                 <p>Mong sẽ có nhiều sự hỗ trợ đóng góp ý kiến từ người dùng để EVKey ngày càng hoàn thiện hơn <strong>EVKey</strong> xin cảm ơn tất cả.</p>
                 <p>
                     <strong>Chỉ cần bạn được sử dụng phần mềm MIỄN PHÍ, TIỆN LỢI và AN TOÀN, chúng tôi đã cảm thấy hạnh phúc.</strong>
@@ -595,7 +604,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="clear"></div>
         </div>
     </div>
-    <div class="wrapper footer">EVKey is the most popular Vietnamese keyboard for Windows / Win. This software is distributed under the GNU GPL from the EVKey project</div>
+    <div class="wrapper footer">EVKey is the most popular Vietnamese keyboard for Windows / MacOS X. This software is distributed under the GNU GPL from the EVKey project</div>
     <div id="glesticky"></div>
 </body>
 <!-- Global site tag (gtag.js) - Google Analytics -->
