--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="#download" title="EVKey dành cho MacOS X" rel="nofollow">Bản chạy trực tiếp cho MacOS X</a>
                     </h3>
                     <img src="media/images/download/evkey-portable.png" alt="EVKey Mac OS" width="155" height="144" />
-                    <a class="downloadbutton" href="https://github.com/evkey/evkey.github.io/releases/download/Latest/EVKeyMac.zip" title="Download EvKey portable 64 bit">Download</a>
+                    <a class="downloadbutton" href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKeyMac.zip" title="Download EvKey portable 64 bit">Download</a>
                     <div class="downloadnote">
                         <strong>Bản dành cho Mac OS X </strong>
                     </div>
