--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-THFTQCQ');</script>
     <!-- End Google Tag Manager -->
+    <script data-ad-client="ca-pub-6322777268798897" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
