--- a/index.html
+++ b/index.html
@@ -452,6 +452,62 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
             <div class="clear"></div>
+
+
+
+<br>
+            <p style="text-align:center;">
+                
+                <hr>
+                <h2>CÁC PHẦN MỀM TIỆN ÍCH KHÁC</h2>
+            </p>
+
+            <div class="custom">
+                <div class="block4">
+                    <h3>
+                        <a href="#download" title="idm" rel="nofollow">Internet Download Manager</a>
+                    </h3>
+                    <img src="media/images/download/idm.png" alt="idm crack" width="155" height="144" />
+                    <a class="downloadbutton" target="_blank" href="https://wannacrack.com/software/internet/internet-download-manager-idm-6-38-build-17"  title="Download IDM">Download</a>
+                    <div class="downloadnote">
+                        <strong>Phần mềm IDM hỗ trợ tải file nhanh</strong>
+                    </div>
+                </div>
+
+                <div class="block4">
+                    <h3>
+                        <a href="##download" title="Download Photoshop crack" rel="nofollow">Photoshop CC 2021</a>
+                    </h3>
+                    <img src="media/images/download/photoshop.png" alt="Photoshop" width="155" height="144" />
+                    <a class="downloadbutton"  target="_blank" href="https://wannacrack.com/software/graphic/adobe-photoshop-2021-v22-2-0-183-x64-v22-1-1-macos"  title="Download Photoshop portable">Download</a>
+                    <div class="downloadnote">
+                        <strong>Phần mềm chỉnh sửa ảnh</strong>
+                    </div>
+                </div>
+                <div class="block4">
+                    <h3>
+                        <a href="#download" title="Winrar" rel="nofollow">Winrar</a>
+                    </h3>
+                    <img src="media/images/download/winrar.png" alt="Winrar Portable" width="155" height="144" />
+                    <a class="downloadbutton"  target="_blank" href="https://wannacrack.com/software/compressor/winrar-6-0-x86-x64-portable" title="Download Winrar">Download</a>
+                    <div class="downloadnote">
+                        <strong>Phần mềm nén và giải nén</strong>
+                    </div>
+                </div>
+                <div class="block4">
+                    <h3>
+                        <a href="#download" title="Microsoft Office 2019" rel="nofollow">Microsoft Office 2019</a>
+                    </h3>
+                    <img src="media/images/download/office.png" alt="Microsoft Office 2019" width="155" height="144" />
+                    <a class="downloadbutton"  target="_blank" href="https://wannacrack.com/software/office-pdf/office-2019-version-2006-build-13001-20498-1908-rtm" title="Microsoft Office 2019">Download</a>
+                    <div class="downloadnote">
+                        <strong>Phần mềm văn phòng </strong>
+                    </div>
+                </div>
+            </div>
+
+
+
             <p style="text-align:center;">
                 Website có hỗ trợ
                 <strong>HTTPS</strong> (giao thức bảo mật với SSL), nếu muốn bạn có thể truy cập
